BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/Case_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Represent Quote Line items selected as part of Supplier Selection process</description>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>