BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Bradken_Description__c.field-meta.xml
<CustomField>
    <fullName>Bradken_Description__c</fullName>
    <formula>Quote_Line_Item__r.Bradken_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bradken Description</label>
    <type>Text</type>
</CustomField>