BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Bradken_Number_Revision__c.field-meta.xml
<CustomField>
    <fullName>Bradken_Number_Revision__c</fullName>
    <formula>Quote_Line_Item__r.Drawing_Number_Revision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bradken Number Revision</label>
    <type>Text</type>
</CustomField>