BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Can_this_product_be_outsourced__c.field-meta.xml
<CustomField>
    <fullName>Can_this_product_be_outsourced__c</fullName>
    <label>Can this product be outsourced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>