BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Customer_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Description__c</fullName>
    <formula>Quote_Line_Item__r.Customer_Part_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Part Description</label>
    <type>Text</type>
</CustomField>