BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>Drawing_Number__c</fullName>
    <formula>Quote_Line_Item__r.Bradken_Part_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drawing Number</label>
    <type>Text</type>
</CustomField>