BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Estimated_Part_Weight__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Part_Weight__c</fullName>
    <description>Used as part of Supplier Selection</description>
    <label>Estimated Part Weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>