BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Estimated_Qty_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Qty_Per_Annum__c</fullName>
    <label>Estimated Qty Per Annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>