BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Material_Grade__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade__c</fullName>
    <formula>Quote_Line_Item__r.Material_Grade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Grade</label>
    <type>Text</type>
</CustomField>