BradkenProduction/force-app/main/default/objects/Case_Line_Item__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>Quote_Line_Item__r.Supplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>